// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-textarea renders 1`] = `
<rux-textarea value="">
  <mock:shadow-root>
    <div class="rux-textarea-field" part="form-field"><textarea aria-invalid="false" class="rux-textarea" id="rux-textarea-1" part="textarea" value=""></textarea>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-textarea>
`;

exports[`rux-textarea renders label prop 1`] = `
<rux-textarea label="hello" value="">
  <mock:shadow-root>
    <div class="rux-textarea-field" part="form-field">
      <label aria-hidden="false" class="rux-textarea-label" htmlfor="rux-textarea-2" part="label">
        <span>
          <slot name="label">
            hello
          </slot>
        </span>
      </label><textarea aria-invalid="false" class="rux-textarea" id="rux-textarea-2" part="textarea" value=""></textarea>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-textarea>
`;

exports[`rux-textarea renders label slot 1`] = `
<rux-textarea value="">
  <mock:shadow-root>
    <div class="rux-textarea-field" part="form-field">
      <label aria-hidden="false" class="rux-textarea-label" htmlfor="rux-textarea-3" part="label">
        <span>
          <slot name="label"></slot>
        </span>
      </label><textarea aria-invalid="false" class="rux-textarea" id="rux-textarea-3" part="textarea" value=""></textarea>
    </div>
  </mock:shadow-root>
  <div slot="label">
    hello
  </div>
  <input class="aux-input" type="hidden" value="">
</rux-textarea>
`;
